# opnsense_firewall_alias_manager

./: Cargo.toml
.cargo/: config.toml
hack/: api-call-notes.txt
src/: main.rs
