#[target.x86_64-unknown-linux-musl]
#linker = "/usr/bin/gcc"
#rustflags = ["-C", "target-feature=+crt-static"]

[package]
name = "opnsense_firewall_alias_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10"}
log = { version = "0.4.0" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
url = { version = "2.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
openssl = { version = "0.10.62", features = ["vendored"] }
